# ylanguage

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  test.py
filer/: __init__.py  argumenter.py  reader.py  writer.py
lexer/: __init__.py  lexer.py  ydelimiter.py  yidentifier.py  yinteger.py  ymap.py  yoperator.py  ytype.py
src/: yerrors.py  ylexer.py  ynodes.py  yparser.py  ytokens.py
src/ybuilder/: __init__.py  ybuilder.py  yreader.py  ywriter.py
src/ylexer/: __init__.py  ylexer.py
src/ylexer/ytypes/: __init__.py  ynumeric.py
src/yparser/: __init__.py  yparser.py
src/yparser/ytypes/: __init__.py  bracket.py  delimiter.py  identifier.py  space.py  string.py  type.py
test/: defandcalls.lexer.y  defandcalls.y  integer.lexer.y  integer.y  lexer.by  lexer.y  maps.lexer.y  maps.y  parser.y  strings.lexer.y  strings.y  test1.y  variables.lexer.y  variables.y
